# data_project

./: .env.example  .gitignore  README.md  pyproject.toml  razb_uch.xlsx  requirements.txt
migrations/models/: 0_20221007094624_init.py
migrations/public/: aerich.sql  data_table.sql
src/: data_model.py  file_process.py  main.py  model_description.py  record_data_model.py  settings.py
src/postgres/: postgres_connection_manager.py  repository.py
